[package]
name = "lin-help"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
comfy-table = "6.1.0"
exitcode = "1.1.2"
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
